src/main/java/com/example/comma/global/error/exception/UnauthorizedException.java
package com.example.comma.global.error.exception;


import com.example.comma.global.error.ErrorCode;

public class UnauthorizedException extends BusinessException {
    public UnauthorizedException() {
        super(ErrorCode.UNAUTHORIZED);
    }

    public UnauthorizedException(ErrorCode errorCode) {
        super(errorCode);
    }
}